<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentCoinList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.CoinListFragment">

<!--    <RelativeLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->

        <RelativeLayout
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:background="@color/teal_200"
            android:padding="@dimen/_12sdp"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/coin"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_toEndOf="@+id/txtCoin"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layoutDirection="rtl" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/_12sdp"
            android:scrollbars="none"
            android:layout_below="@+id/toolBar"
            android:layout_above="@id/filterTab"/>
        <RelativeLayout
            android:id="@+id/filterTab"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:background="#c0c0c0"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/btn_active_coins"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_24sdp"
                android:gravity="center"
                android:text="@string/txt_active_coins"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:textAllCaps="false"
                android:background="@drawable/bg_unselected_filter"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="12dp"/>


            <TextView
                android:id="@+id/btn_inactive_coins"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_24sdp"
                android:gravity="center"
                android:text="@string/txt_inactive_coins"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:textAllCaps="false"
                android:background="@drawable/bg_unselected_filter"
                android:layout_toEndOf="@+id/btn_active_coins"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"/>

            <TextView
                android:id="@+id/btn_new_coins"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_24sdp"
                android:gravity="center"
                android:text="@string/txt_new_coins"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:textAllCaps="false"
                android:background="@drawable/bg_unselected_filter"
                android:layout_toEndOf="@+id/btn_inactive_coins"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="40dp"/>

            <TextView
                android:id="@+id/btn_only_coins"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_24sdp"
                android:gravity="center"
                android:text="@string/txt_only_coins"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:textAllCaps="false"
                android:background="@drawable/bg_unselected_filter"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_active_coins"
                android:layout_marginStart="40dp"
                android:layout_marginTop="12dp"/>


            <TextView
                android:id="@+id/btn_only_tokens"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_24sdp"
                android:gravity="center"
                android:background="@drawable/bg_unselected_filter"
                android:text="@string/txt_only_tokens"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:textAllCaps="false"
                android:layout_toEndOf="@+id/btn_only_coins"
                android:layout_alignTop="@+id/btn_only_coins"
                android:layout_marginStart="16dp"/>


        </RelativeLayout>

<!--    </RelativeLayout>-->

</RelativeLayout>